package com.designpatterns.creational.abstractfactory;

public interface Vehicle {
    public void getModel();
    public void getFuelCapacity();
}

