package com.designpatterns.creational.abstractfactory;

public interface VehicleFactory {
    public Vehicle creteVehicle();
}
